<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragment.VerifyNumber">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:text="@string/first_step"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="serif"
        android:textColor="@android:color/black"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="100dp"
        />
    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_step_txt"
        android:layout_below="@id/title"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_code_below"
        android:layout_below="@id/txt1"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        />

        <com.chaos.view.PinView
            android:id="@+id/code_text"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:hint="------"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="#D7000000"
            android:textColorHint="#A9000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/colorPrimary"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="false"
            app:itemCount="6"
            app:itemHeight="48dp"
            app:itemRadius="4dp"
            app:itemSpacing="0dp"
            app:itemWidth="48dp"
            app:lineColor="#A9000000"
            app:lineWidth="2dp"
            app:viewType="rectangle" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_side_lock"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/code_text"/>
    <Button
        android:id="@+id/verify_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/next"
        android:textAllCaps="false"
        android:layout_below="@id/code_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        />

    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.gmail.samehadar.iosdialog.CamomileSpinner
            android:id="@+id/progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:spinnerColor="#DD222222" />
    </RelativeLayout>
</RelativeLayout>