<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CreateGroupActivity"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_title"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:paddingStart="12dp"
                    android:paddingBottom="10dp"
                    android:layout_marginStart="16dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="5"
                    android:layout_marginEnd="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_title"
                        android:inputType="text"
                        android:textSize="14sp"
                        android:paddingBottom="12dp"
                        android:layout_marginStart="16dp"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_section"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:paddingStart="12dp"
                    android:paddingBottom="10dp"
                    android:layout_marginStart="16dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="5"
                    android:layout_marginEnd="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_section"
                        android:inputType="textPersonName"
                        android:textSize="14sp"
                        android:paddingBottom="12dp"
                        android:layout_marginStart="16dp"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_course_code"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:paddingStart="12dp"
                    android:paddingBottom="10dp"
                    android:layout_marginStart="16dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="5"
                    android:layout_marginEnd="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/course_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_course_code"
                        android:inputType="textPersonName"
                        android:textSize="14sp"
                        android:paddingBottom="12dp"
                        android:layout_marginStart="16dp"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_instructor"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:paddingStart="12dp"
                    android:paddingBottom="10dp"
                    android:layout_marginStart="16dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="5"
                    android:layout_marginEnd="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/instructor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_instructor"
                        android:inputType="textEmailAddress"
                        android:textSize="14sp"
                        android:paddingBottom="12dp"
                        android:layout_marginStart="16dp"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>




            <LinearLayout
                android:id="@+id/upload_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/group_image"
                    android:layout_weight="4"
                    android:textSize="16sp"
                    android:padding="16dp"
                    android:layout_marginStart="16dp"/>

                <ImageView
                    android:id="@+id/upload_btn"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_baseline_cloud_upload_24"/>
            </LinearLayout>

            <Button
                android:id="@+id/create_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"/>





        </LinearLayout>



    </RelativeLayout>

</androidx.core.widget.NestedScrollView>


